--- a/Dll/Dll.vcxproj
+++ b/Dll/Dll.vcxproj
@@ -251,11 +251,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Src\Battle\battle.hpp" />
+    <ClInclude Include="Src\Camera\Camera.hpp" />
+    <ClInclude Include="Src\Charsel\Charsel.hpp" />
     <ClInclude Include="Src\Input\Input.hpp" />
     <ClInclude Include="Src\Net\net.hpp" />
     <ClInclude Include="Src\Net\Online Training\oTraining.hpp" />
     <ClInclude Include="Src\Player\Properties\prop.hpp" />
     <ClInclude Include="Src\Scene\Scene.hpp" />
+    <ClInclude Include="Src\Stage\Stage.hpp" />
     <ClInclude Include="Src\Textures\Textures.hpp" />
     <ClInclude Include="Src\Util\Display\Display.hpp" />
     <ClInclude Include="Thirdparty\stb\stb_image.h" />
@@ -390,6 +393,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Battle\battle.cpp" />
+    <ClCompile Include="Src\Camera\Camera.cpp" />
+    <ClCompile Include="Src\Charsel\Charsel.cpp" />
     <ClCompile Include="Src\Core\ModConsole\ModConsole.cpp" />
     <ClCompile Include="src\Core\Entry.cpp" />
     <ClCompile Include="Src\Core\Hooks\Functions\D3D11\Present.cpp" />
@@ -413,6 +418,7 @@
     <ClCompile Include="Src\Player\Mechanics\mech.cpp" />
     <ClCompile Include="Src\Player\Properties\prop.cpp" />
     <ClCompile Include="Src\Scene\Scene.cpp" />
+    <ClCompile Include="Src\Stage\Stage.cpp" />
     <ClCompile Include="Src\Textures\Textures.cpp" />
     <ClCompile Include="src\util\console\Console.cpp" />
     <ClCompile Include="src\Util\Hook\HookManager.cpp" />
