--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,65 @@
 /.vs/Perfect Storm/v16
 /bin/Dll_Release
 /build/Dll_Release
+bin/Dll_Public/d3dcompiler_47.dll
+bin/Dll_Public/d3dcompiler_47.exp
+bin/Dll_Public/d3dcompiler_47.lib
+build/Dll_Public/Console.obj
+build/Dll_Public/d3dcompiler_47.dll.recipe
+build/Dll_Public/d3dcompiler_47.iobj
+build/Dll_Public/d3dcompiler_47.ipdb
+build/Dll_Public/d3dcompiler_47.pch
+build/Dll_Public/dll.log
+build/Dll_Public/Dll.obj
+build/Dll_Public/Dll.tlog/CL.command.1.tlog
+build/Dll_Public/Dll.tlog/CL.read.1.tlog
+build/Dll_Public/Dll.tlog/CL.write.1.tlog
+build/Dll_Public/Dll.tlog/Dll.lastbuildstate
+build/Dll_Public/Dll.tlog/Dll.write.1u.tlog
+build/Dll_Public/Dll.tlog/link.command.1.tlog
+build/Dll_Public/Dll.tlog/link.read.1.tlog
+build/Dll_Public/Dll.tlog/link.write.1.tlog
+build/Dll_Public/Dll.tlog/Masm.read.1u.tlog
+build/Dll_Public/Dll.tlog/Masm.write.1u.tlog
+build/Dll_Public/Entry.obj
+build/Dll_Public/Game.obj
+build/Dll_Public/HookManager.obj
+build/Dll_Public/Hooks.obj
+build/Dll_Public/ModConsole.obj
+build/Dll_Public/Module.obj
+build/Dll_Public/pch.obj
+build/Dll_Public/Present.obj
+build/Dll_Public/Settings.obj
+build/Dll_Public/vc142.pdb
+build/Dll_Public/WndProc.obj
+bin/Dll_Public/d3dcompiler_47.dll
+bin/Dll_Public/d3dcompiler_47.exp
+bin/Dll_Public/d3dcompiler_47.lib
+build/Dll_Public/Console.obj
+build/Dll_Public/d3dcompiler_47.dll.recipe
+build/Dll_Public/d3dcompiler_47.iobj
+build/Dll_Public/d3dcompiler_47.ipdb
+build/Dll_Public/d3dcompiler_47.pch
+build/Dll_Public/dll.log
+build/Dll_Public/Dll.obj
+build/Dll_Public/Dll.tlog/CL.command.1.tlog
+build/Dll_Public/Dll.tlog/CL.read.1.tlog
+build/Dll_Public/Dll.tlog/CL.write.1.tlog
+build/Dll_Public/Dll.tlog/Dll.lastbuildstate
+build/Dll_Public/Dll.tlog/Dll.write.1u.tlog
+build/Dll_Public/Dll.tlog/link.command.1.tlog
+build/Dll_Public/Dll.tlog/link.read.1.tlog
+build/Dll_Public/Dll.tlog/link.write.1.tlog
+build/Dll_Public/Dll.tlog/Masm.read.1u.tlog
+build/Dll_Public/Dll.tlog/Masm.write.1u.tlog
+build/Dll_Public/Entry.obj
+build/Dll_Public/Game.obj
+build/Dll_Public/HookManager.obj
+build/Dll_Public/Hooks.obj
+build/Dll_Public/ModConsole.obj
+build/Dll_Public/Module.obj
+build/Dll_Public/pch.obj
+build/Dll_Public/Present.obj
+build/Dll_Public/Settings.obj
+build/Dll_Public/vc142.pdb
+build/Dll_Public/WndProc.obj
