--- a/Dll/Dll.vcxproj
+++ b/Dll/Dll.vcxproj
@@ -171,7 +171,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>minhook.x64.lib;imgui.lib;GGPO.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>minhook.x64.lib;imgui.lib;GGPO.lib;libcurl.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)thirdparty\lib\Release\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ModuleDefinitionFile>$(ProjectDir)Dll.def</ModuleDefinitionFile>
     </Link>
@@ -271,12 +271,26 @@
     <ClInclude Include="Src\Util\Process\Module.hpp" />
     <ClInclude Include="Src\Util\Process\Process.hpp" />
     <ClInclude Include="Src\Util\Util.hpp" />
+    <ClInclude Include="Thirdparty\base64mod\base64.h" />
+    <ClInclude Include="Thirdparty\curl\curl.h" />
+    <ClInclude Include="Thirdparty\curl\curlver.h" />
+    <ClInclude Include="Thirdparty\curl\easy.h" />
+    <ClInclude Include="Thirdparty\curl\header.h" />
+    <ClInclude Include="Thirdparty\curl\mprintf.h" />
+    <ClInclude Include="Thirdparty\curl\multi.h" />
+    <ClInclude Include="Thirdparty\curl\options.h" />
+    <ClInclude Include="Thirdparty\curl\stdcheaders.h" />
+    <ClInclude Include="Thirdparty\curl\system.h" />
+    <ClInclude Include="Thirdparty\curl\typecheck-gcc.h" />
+    <ClInclude Include="Thirdparty\curl\urlapi.h" />
     <ClInclude Include="Thirdparty\GGPO\ggponet.h" />
+    <ClInclude Include="Thirdparty\half\half.hpp" />
     <ClInclude Include="Thirdparty\imgui\include\imconfig.h" />
     <ClInclude Include="Thirdparty\imgui\include\imgui.h" />
     <ClInclude Include="Thirdparty\imgui\include\imgui_impl_dx11.h" />
     <ClInclude Include="Thirdparty\imgui\include\imgui_impl_win32.h" />
     <ClInclude Include="Thirdparty\imgui\include\imgui_internal.h" />
+    <ClInclude Include="Thirdparty\imgui\include\imgui_stdlib.h" />
     <ClInclude Include="Thirdparty\imgui\include\imstb_rectpack.h" />
     <ClInclude Include="Thirdparty\imgui\include\imstb_textedit.h" />
     <ClInclude Include="Thirdparty\imgui\include\imstb_truetype.h" />
@@ -298,6 +312,7 @@
     <ClCompile Include="Src\Core\Hooks\Functions\D3D11\Present.cpp" />
     <ClCompile Include="Src\Core\Hooks\Functions\Win32\WndProc.cpp" />
     <ClCompile Include="Src\Core\Hooks\Hooks.cpp" />
+    <ClCompile Include="Src\Core\Online\online.cpp" />
     <ClCompile Include="Src\Core\SDK\Game.cpp" />
     <ClCompile Include="Src\Core\Settings\Settings.cpp" />
     <ClCompile Include="src\pch.cpp">
@@ -313,12 +328,17 @@
     <ClCompile Include="src\util\console\Console.cpp" />
     <ClCompile Include="src\Util\Hook\HookManager.cpp" />
     <ClCompile Include="Src\Util\Process\Module.cpp" />
+    <ClCompile Include="Thirdparty\base64mod\base64.cpp" />
+    <ClCompile Include="Thirdparty\imgui\include\imgui_stdlib.cpp" />
   </ItemGroup>
   <ItemGroup>
     <MASM Include="Dll.asm" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Dll.def" />
+    <None Include="Thirdparty\curl\Makefile.am" />
+    <None Include="Thirdparty\curl\Makefile.in" />
+    <None Include="Thirdparty\half\umHalf.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
