Fixed screen glitch on resolution change

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,30 @@ build/Dll_Public/Present.obj
 build/Dll_Public/Settings.obj
 build/Dll_Public/vc142.pdb
 build/Dll_Public/WndProc.obj
+bin/Dll_Public/d3dcompiler_47.dll
+bin/Dll_Public/d3dcompiler_47.exp
+bin/Dll_Public/d3dcompiler_47.lib
+build/Dll_Public/Console.obj
+build/Dll_Public/d3dcompiler_47.iobj
+build/Dll_Public/d3dcompiler_47.ipdb
+build/Dll_Public/dll.log
+build/Dll_Public/Dll.tlog/CL.command.1.tlog
+build/Dll_Public/Dll.tlog/CL.read.1.tlog
+build/Dll_Public/Dll.tlog/CL.write.1.tlog
+build/Dll_Public/Dll.tlog/Dll.lastbuildstate
+build/Dll_Public/Dll.tlog/Dll.write.1u.tlog
+build/Dll_Public/Dll.tlog/link.delete.1.tlog
+build/Dll_Public/Dll.tlog/link.read.1.tlog
+build/Dll_Public/Entry.obj
+build/Dll_Public/Game.obj
+build/Dll_Public/HookManager.obj
+build/Dll_Public/Hooks.obj
+build/Dll_Public/ModConsole.obj
+build/Dll_Public/Module.obj
+build/Dll_Public/pch.obj
+build/Dll_Public/Present.obj
+build/Dll_Public/Settings.obj
+build/Dll_Public/vc142.pdb
+build/Dll_Public/WndProc.obj
+*.ipch
+*.opendb
